--- a/src/pages/01a/style.css
+++ b/src/pages/01a/style.css
@@ -36,6 +36,7 @@ body {
             }
 
             .playground {
+                position: relative;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -44,7 +45,24 @@ body {
                 min-height: 60vh;
                 border-radius: 8px;
 
-                .box1{
+                button {
+                    position: absolute;
+                    top: 10px;
+                    background-color: #382f836c;
+                    right: 10px;
+                    border: none;
+                    padding: 12px 20px;
+                    color: white;
+                    cursor: pointer;
+                    transition: background-color .3s ease;
+                    border-radius: 4px;
+                    &:hover {
+                        background-color: #372f83c9;
+                    }
+                }
+
+                .box1 {
+                    border-radius: 6px;
                     opacity: 0;
                     transform: scale(0);
                     display: flex;
