--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     
         padding: 16px;
         flex-wrap: wrap;
+        gap: 10px;
 
         a{
             text-decoration: inherit;
