--- a/src/pages/03/style.css
+++ b/src/pages/03/style.css
@@ -34,9 +34,12 @@ body {
             h1 {
                 text-align: center;
             }
-            p{
+
+            p {
                 color: rgb(168, 168, 168);
             }
+
+
 
             .playground {
                 position: relative;
@@ -48,7 +51,7 @@ body {
                 min-height: 60vh;
                 border-radius: 8px;
 
-                button {
+                #reloadBtn {
                     position: absolute;
                     top: 10px;
                     background-color: #382f836c;
@@ -57,10 +60,34 @@ body {
                     padding: 12px 20px;
                     color: white;
                     cursor: pointer;
-                    transition: background-color .3s ease;
                     border-radius: 4px;
+                    transition: background-color .3s ease;
+
                     &:hover {
                         background-color: #372f83c9;
+                    }
+                }
+
+                .controls {
+                    display: flex;
+                    justify-content: space-around;
+                    position: absolute;
+                    gap: 20px;
+                    bottom: 20px;
+                    left: 30px;
+
+                    button {
+                        color: white;
+                        padding: 8px 18px;
+                        border: none;
+                        border-radius: 4px;
+                        background-color: #382f836c;
+                        transition: background-color .3s ease;
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: #372f83c9;
+                        }
                     }
                 }
 
@@ -73,16 +100,16 @@ body {
                     align-items: center;
                     width: 250px;
                     height: 250px;
-        
+
                 }
 
-                .box1{
-                
+                .box1 {
+
                     background-color: #1e1b3b;
                 }
 
-                .box2{
-                     background-color: #3f9c5b;
+                .box2 {
+                    background-color: #3f9c5b;
                 }
             }
 
